# accord

./: .gitignore  README.md
accord/: main.go
e_honda/accord/: go.mod  wails.json
e_honda/accord/frontend/: package.json
gas_honda/: pyproject.toml
gas_honda/accord/: cli.py
gas_honda/accord/commands/: cmd_auth.py  cmd_channels.py  cmd_connect.py  cmd_server.py  cmd_status.py  cmd_strum.py  cmd_thread.py  cmd_voip.py
gas_honda/accord/tools/: helpers.py
hybrid-honda/: main.js  package-lock.json  package.json
hybrid-honda/models/: app-theme.json  server-config.json  user-config.json
hybrid-honda/views/: index.html  login.html  messages.html  register.html  server-settings.html  server-users.html  server.html  stream.html  text-channel.html  user-settings.html  voice-lobby.html
